EL-739 Remove redundant (mandatory) net_employment_income field (#115)
